# automuon

./: .gitignore  LICENSE  README.md  changelog.md  contributing.md  pyproject.toml
automuon/: __init__.py  optimizer.py
automuon/backends/: __init__.py  muon.py  newton_schulz.py  scanner.py
automuon/ddp/: __init__.py  muon_ddp.py
automuon/utils/: __init__.py  muon_logging.py
examples/: cifar10_cnn.py
tests/: conftest.py  test_ddp.py  test_muon.py  test_newton_schulz.py  test_optimizer.py  test_scanner.py
